Fixed scrollbar issue for edge

--- a/public/css/dark_mode.css
+++ b/public/css/dark_mode.css
@@ -177,6 +177,7 @@ html {
     overflow: scroll;
     overflow-x: hidden;
     scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
